# chibitv

./: .editorconfig  .gitattributes  .gitignore  .gitmodules  Cargo.toml  README.md  config.toml.example  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
crates/chibitv/: Cargo.toml  build.rs
crates/chibitv/src/: aac.rs  cas.rs  channel.rs  command.rs  config.rs  demux.rs  descrambler.rs  event_crawler.rs  hevc.rs  m2ts.rs  main.rs  mmt.rs  mp2.rs  mp4.rs  registry.rs  remux.rs  rpc.rs  server.rs  service_information.rs  stream.rs  tuner.rs  workspace.rs
crates/chibitv/src/command/: live.rs  record.rs  remux.rs  scan.rs  serve.rs  status.rs
crates/chibitv/src/tuner/: dvb.rs  stdin.rs
crates/chibitv_b10/: Cargo.toml
crates/chibitv_b10/src/: descriptor.rs  lib.rs  read_ext.rs  table.rs
crates/chibitv_b24/: Cargo.toml
crates/chibitv_b24/src/: additional_symbols.rs  lib.rs
crates/chibitv_b25/: Cargo.toml
crates/chibitv_b25/src/: cas.rs  descrambler.rs  lib.rs  multi2.rs
crates/chibitv_b60/: Cargo.toml
crates/chibitv_b60/src/: compressed_ip.rs  deflag.rs  descriptor.rs  lib.rs  message.rs  mfu.rs  mmtp.rs  table.rs  tlv.rs
crates/chibitv_b61/: Cargo.toml
crates/chibitv_b61/src/: cas.rs  descrambler.rs  lib.rs
gui/: biome.jsonc  buf.gen.yaml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  rsbuild.config.ts  tsconfig.json
gui/public/: index.html
gui/src/: App.tsx  index.ts  styles.css
gui/src/api/: index.ts  schema.d.ts  stream.tsx
gui/src/components/: Channels.tsx  Events.tsx  MobileChannels.tsx  Navbar.tsx  OverlayNavbar.tsx  Page.tsx  Player.tsx
gui/src/player/: playback.ts  protocol.ts  transcoder.worker.ts
patches/: mediabunny@1.50.8.patch
proto/chibitv/v1/: chibitv.proto
