[workspace]
resolver = "3"
members = ["crates/*"]

[patch.crates-io]
cros-codecs = { git = "https://github.com/siketyan/cros-codecs.git", rev = "e6e1281" }
dvbv5-sys = { git = "https://gitlab.com/kazuki08241/rust-libdvbv5-sys.git", rev = "7cab8db" }

[profile.release-with-debug]
debug    = true
inherits = "release"
