[package]
name = "chibitv"
version = "0.1.0"
edition = "2024"

[dependencies]
chibitv_b60 = { path = "../chibitv_b60" }
chibitv_b61 = { path = "../chibitv_b61" }

aes = "0.8.4"
anyhow = "1.0.101"
axum = { version = "0.8.7", features = ["macros"] }
bitstream-io = "4.9.0"
bytes = "1.11.1"
chrono = { version = "0.4.42", features = ["serde"] }
clap = { version = "4.5.53", features = ["derive"] }
cros-codecs = "0.0.6"
ctr = "0.9.2"
hex = "0.4.3"
http-body = "1.0.1"
http-body-util = "0.1.3"
mpeg2ts = "0.5.0"
papaya = "0.2.3"
rand = "0.9.3"
serde = { version = "1.0.228", features = ["derive"] }
sha2 = "0.10.9"
shiguredo_mp4 = "2026.1.0"
tokio = { version = "1.49.0", features = ["macros", "net", "rt-multi-thread"] }
tokio-stream = { version = "0.1.18", features = ["sync"] }
toml = "1.0.1"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }
utoipa = { version = "5.4.0", features = ["chrono"] }

[target.'cfg(unix)'.dependencies]
dvbv5-sys = { version = "0.2.1", optional = true }
libc = { version = "0.2.182", optional = true }

[features]
default = ["dvb"]
dvb = ["dep:dvbv5-sys", "dep:libc"]
