[package]
name = "chibitv"
version = "0.1.0"
edition = "2024"

[dependencies]
chibitv_b25 = { path = "../chibitv_b25" }
chibitv_b60 = { path = "../chibitv_b60" }
chibitv_b61 = { path = "../chibitv_b61" }

anyhow = "1.0.103"
axum = { version = "0.8.9", features = ["macros"] }
bitstream-io = "4.10.0"
bytes = "1.12.0"
chrono = { version = "0.4.45", features = ["serde"] }
clap = { version = "4.6.1", features = ["derive"] }
cros-codecs = "0.0.6"
hex = "0.4.3"
http-body = "1.0.1"
http-body-util = "0.1.3"
mpeg2ts = "0.6.0"
papaya = "0.2.4"
serde = { version = "1.0.228", features = ["derive"] }
shiguredo_mp4 = "2026.3.0"
tokio = { version = "1.52.3", features = ["macros", "net", "rt-multi-thread"] }
tokio-stream = { version = "0.1.18", features = ["sync"] }
toml = "1.1.2"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }
utoipa = { version = "5.5.0", features = ["chrono"] }

[target.'cfg(unix)'.dependencies]
dvbv5-sys = { version = "0.2.1", optional = true }
libc = { version = "0.2.186", optional = true }

[features]
default = ["dvb"]
dvb = ["dep:dvbv5-sys", "dep:libc"]
